<resources>
    <string name="app_name">LocalizaMe</string>
    <!-- Facebook ID -->
    <string name="facebook_app_id">408586353024011</string>
    <string name="fb_login_protocol_scheme">fb408586353024011</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correo Electrónico</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_registrar">Registrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Correo Electrónico inválido</string>
    <string name="error_no_email">Para reestableces la contraseña es necesario ingresar un correo electronico</string>
    <string name="error_invalid_password"><![CDATA[
    El password debe de contener por lo menos:
    1 Letra mayúscula.
    1 Letra minúscula.
    1 Número.
    1 Caracter especial.
    Debe tener una longitud mínima
    de 8 caracteres.
    ]]>
    </string>
    <string name="error_incorrect_password">El pasword es incorrecto</string>
    <string name="error_field_required">Éste campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--API-->
    <string name="Server">http://192.168.0.10:9090/</string>
    <string name="Authentitacion">lamarrullaWS/rest/Authentication</string>
    <string name="API">lamarrullaWS/rest/lamarrullaAPI</string>
    <string name="APISelectAll">lamarrullaWS/rest/lamarrullaAPI/%s/0</string>
    <!--API-->

    <string name="Token">token</string>
    <string name="Salt">salt</string>
    <string name="Username">username</string>
    <string name="Password">password</string>
    <string name="TipoAcceso">tipoAcceso</string>
    <string name="StatusLine">{\"Error\":\"%s\", \"StatusCode\":%03d}</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Secret">secret</string>
    <string name="BarerToken">Bearer %s</string>
    <integer name="AccesoUsuarioConstasenna">2</integer>
    <integer name="AccesoUsuarioConstasennaServer">1</integer>
    <integer name="AccesoUsuarioConstasennaFirebase">2</integer>
    <integer name="AccesoFacebook">3</integer>
    <integer name="AccesoGoogle">4</integer>
    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAgv3R6dIXMcCJy70KnG2IleXF-oQ2Dh9Q</string>-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyChTJxhH1cYCFWS-WcpAdQYyIWOO7Iq0qY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AutenticacionInvalida">Usuario o password incorrecto.</string>
    <string name="WebClient">253804100294-cbr3j5hdm4nsbk4h6keckclhlspqopis.apps.googleusercontent.com</string>
    <string name="mac_addres">MAC ADDRES</string>
    <string name="agregar">AGREGAR</string>
    <string name="mis_dispositivos">Mis dispositivos</string>
    <string name="dispositivos">dispositivos</string>

    <!--firebase-->

    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">angelnmara@gmail.com</string>
    <string name="firebase_password" translatable="false">M@r@dr1980</string>
    <string name="notification_text">Localizando, toca para cancelar</string>
    <string name="wlan0">wlan0</string>
    <string name="comparitir_mi_ubica">Comparitir mi ubicación</string>
    <string name="title_activity_alta_device">AltaDeviceActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="altaDispositvo">Alta de Dispositivo</string>
    <string name="administraDispositvo">Administra dispositivos</string>
    <string name="Locations">locations</string>
    <string name="obtener_codigo">Obtener código</string>
    <string name="mac_address">MAC ADDRESS</string>
    <string name="usuario">USUARIO</string>
    <string name="desliza_para_registrar">Desliza para registrar</string>
    <string name="siguiente">Siguiente</string>
    <string name="leyendaComenzar">Localizame te da las gracias por darte de alta, da click en SIGUIENTE para comenzar.</string>
    <string name="escaneaQR">Escanea QR</string>
    <string name="noConexionInternet">Verifica tu conexión a internet</string>
    <string name="deslizaAlta">Desliza completamente para dar de alta</string>
    <string name="operacionCancelada">Inicio por facebook cancelado</string>
    <string name="errroSesionFacebook">Ocurrio un error al iniciar la session en facebook.</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="regxMAC">^([0-9A-Fa-f]{2}[:-]){5}([0-9A-Fa-f]{2})$</string>
    <string name="errorImagenSeleccionada">La imagen seleccionada no corresponde a un QR valido</string>
    <string name="usuarioSinNombre">El usuario tiene que tener un nombre</string>
    <string name="usuarioMismoNombre">Ya existe un usuario con ese nombre</string>
    <string name="activarGPS">Se necesita activar el GPS</string>
    <string name="compartir_qr">Compartir QR</string>
    <string name="salir">Salir</string>
    <string name="direccionCorreoOtroUsuario">La dirección de correo esta en uso con otro usuario</string>
    <string name="emailIsInUse">The email address is already in use by another account.</string>
    <string name="passworParaContinuar">Se requiere un password para continuar</string>
    <string name="bearing">bearing</string>
    <string name="speed">speed</string>
    <string name="c_digo_de_autenticaci_n">Código de autenticación</string>
    <string name="CodeVerficacionInvalidoIng">The sms verification code used to create the phone auth credential is invalid. Please resend the verification code sms and be sure use the verification code provided by the user.</string>
    <string name="CodeVerificacionInvalidoEsp">El codigo de verificación usado es invalido. Por favor reenvia el codigo de verificación.</string>
    <string name="autenticacionTelefonica">Envio de autenticación telefónica en curso, por favor espera en lo que es validado el mensaje</string>

    <!--firebase-->

</resources>
