<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/administraDispositvo" />
        <!--<item
            android:id="@+id/nav_ubicacion"
            android:icon="@drawable/ic_map_marker"
            android:title="@string/comparitir_mi_ubica" />-->
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_qrcode"
            android:title="@string/obtener_codigo" />
    </group>

    <item android:title="Comunidad">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/compartir_qr" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/salir" />
        </menu>
    </item>
</menu>
